# GTI320-lab4

./: CMakeLists.txt  README.md
labo01/: CMakeLists.txt  main.cpp
labo01/src/: DenseStorage.h  Matrix.h  MatrixBase.h  Operators.h  SparseMatrix.h  SparseMatrixBase.h  Types.h  Vector.h
labo01/tests/: TestsDenseStorage.cpp  TestsMatrix.cpp  TestsOperators.cpp  TestsPerformance.cpp  TestsSparseMatrix.cpp  TestsSupplementaires.cpp  TestsVector.cpp
labo_fk/: CMakeLists.txt  main.cpp
labo_fk/resources/: character.bvh  simple.bvh
labo_fk/src/: Armature.cpp  Armature.h  BVHParser.h  FKApplication.cpp  FKApplication.h  FKGLCanvas.cpp  FKGLCanvas.h  LinkUI.cpp  LinkUI.h  Math3D.h  SVD.h  SubMatrix.h
labo_fk/tests/: TestsMath3D.cpp  TestsSubMatrix.cpp
labo_ik/: CMakeLists.txt  main.cpp
labo_ik/src/: IKApplication.cpp  IKApplication.h  IKGLCanvas.cpp  IKGLCanvas.h  IKSolver.cpp  IKSolver.h  SimpleLinkUI.cpp  SimpleLinkUI.h  TargetUI.cpp  TargetUI.h
labo_physique/: CMakeLists.txt  GraphColoring.cpp  GraphColoring.h  Jacobi.hpp  ParticleSimApplication.cpp  ParticleSimApplication.h  ParticleSimGLCanvas.cpp  ParticleSimGLCanvas.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystemFactory.cpp  ParticleSystemFactory.h  Solvers.h  Vector2d.h  main.cpp
